--- a/src/app/certificari/certificari.module.css
+++ b/src/app/certificari/certificari.module.css
@@ -97,7 +97,7 @@
 
 .certDetails {
   font-size: 13px !important;
-  color: #888 !important;
+  color: #636363 !important;
   font-style: italic;
 }
 
@@ -217,7 +217,7 @@
 
 .partnerCountry {
   font-size: 13px;
-  color: #888;
+  color: #636363;
 }
 
 .ctaSection {
