--- a/src/app/industrii/[slug]/industry.module.css
+++ b/src/app/industrii/[slug]/industry.module.css
@@ -356,7 +356,7 @@
 }
 
 .otherCard svg:last-child {
-  color: #999;
+  color: #767676;
   transition: transform 0.2s ease;
 }
 
