--- a/src/app/industrii/industrii.module.css
+++ b/src/app/industrii/industrii.module.css
@@ -127,7 +127,7 @@
 
 .cardStats span {
   font-size: 13px;
-  color: #888;
+  color: #636363;
   font-weight: 500;
 }
 
